<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/main_header_selector">
    
	<TextView
	    android:id="@+id/textViewEndworkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_end_activity_title"
        android:textSize="30sp"
        android:textColor="@color/blue" />
	
    <Button
        android:layout_width="170dip" 
		android:layout_height="wrap_content" 
		android:id="@+id/btnShareEndWorkout"
		android:layout_below="@id/textViewEndworkout"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:text="@string/workout_end_activity_share_button"
		android:textColor="@color/yellow"
		android:background="@drawable/button_selector"></Button> 
    
    <Button
        android:layout_width="170dip" 
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:id="@+id/btnGraphicEndWorkout"
		android:layout_below="@id/btnShareEndWorkout"
		android:text="@string/workout_end_activity_graphic_button"
		android:textColor="@color/yellow"
		android:background="@drawable/button_selector"></Button> 
    
    <Button 
        android:layout_width="170dip"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:layout_below="@id/btnGraphicEndWorkout"
		android:id="@+id/btnExitNoSaveEndWorkout"
		android:text="@string/workout_end_activity_exit_no_save_button"
		android:textColor="@color/yellow"
		android:background="@drawable/button_selector"></Button> 
    
    <Button 
        android:layout_width="170dip"
		android:layout_height="wrap_content" 
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:id="@+id/btnExitSaveEndWorkout"
		android:layout_below="@id/btnExitNoSaveEndWorkout"
		android:text="@string/workout_end_activity_exit_save_button"
		android:textColor="@color/yellow"
		android:background="@drawable/button_selector"></Button>
    
    
</RelativeLayout>
