<RelativeLayout 
    android:id="@+id/RelativeLayout01" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/main_header_selector">

    <TextView
        android:id="@+id/textViewMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title" 
        android:textSize="30sp"
        android:textColor="@color/blue"/>
    
	
    
    <Button 
        android:layout_width="150dip"
		android:layout_height="wrap_content" 
		android:id="@+id/btnNewWorkout"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/textViewMainTitle"
   		android:layout_marginTop="20dip"
		android:text="@string/main_activity_new_workout_button"
		android:textColor="@color/yellow"
		android:background="@drawable/button_selector"></Button>
     


   	
    <Button 
        android:layout_width="150dip"
		android:layout_height="wrap_content" 
		android:id="@+id/btnViewWorkouts"
		android:layout_below="@id/btnNewWorkout"
   		android:layout_marginTop="20dip"
   		android:layout_centerHorizontal="true"
   		android:textColor="@color/yellow"
		android:text="@string/main_activity_view_workouts_button"
		android:background="@drawable/button_selector"></Button> 
	
    
    
    <Button 
        android:layout_width="150dip"
		android:layout_height="wrap_content" 
		android:id="@+id/btnProfileManagement"
		android:layout_below="@id/btnViewWorkouts"
   		android:layout_marginTop="20dip"
   		android:layout_centerHorizontal="true"
   		android:textColor="@color/yellow"
		android:text="@string/main_activity_profile_management_button"
		android:background="@drawable/button_selector"></Button> 	
    
    
</RelativeLayout>
