<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    android:id="@+id/new_workout_popup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/new_workout_popup_selector" >
    
    
    <TextView
          android:id="@+id/newWorkoutPopupTitleTextView"
          android:layout_width="250dip"
          android:layout_height="wrap_content"
          android:textSize="15sp"
          android:textColor="@color/black"
          android:text="@string/new_workout_popup_title" />
    
    
    <TextView
          android:id="@+id/newWorkoutPopupWorkoutNameTextView"
          android:layout_width="100dip"
          android:layout_height="40dip"
          android:textSize="15sp"
          android:textColor="@color/black"
          android:layout_below="@id/newWorkoutPopupTitleTextView"
          android:text="@string/new_workout_popup_workout_name_text_view" />
    <EditText
          android:id="@+id/newWorkoutPopupEditText"
          android:layout_width="150dip"
          android:layout_height="40dip"
          android:layout_toRightOf="@id/newWorkoutPopupWorkoutNameTextView"
          android:layout_toEndOf="@id/newWorkoutPopupWorkoutNameTextView"
          android:layout_below="@id/newWorkoutPopupTitleTextView"
          android:inputType="text">
    </EditText>
    
    
    <TextView
          android:id="@+id/newWorkoutPopupStepsPerMinuteTextView"
          android:layout_width="100dip"
          android:layout_height="40dip"
          android:textSize="15sp"
          android:textColor="@color/black"
          android:layout_below="@id/newWorkoutPopupWorkoutNameTextView"
          android:text="@string/new_workout_popup_steps_per_minute_text_view" />
    <EditText
          android:id="@+id/newWorkoutPopupStepsPerMinuteEditText"
          android:layout_width="150dip"
          android:layout_height="40dip"
          android:layout_below="@id/newWorkoutPopupEditText"
          android:inputType="number"
          android:layout_toRightOf="@id/newWorkoutPopupStepsPerMinuteTextView"
          android:layout_toEndOf="@id/newWorkoutPopupStepsPerMinuteTextView">
    </EditText>
    
    
    <Button
        android:id="@+id/btnCancelNewWorkoutPopup"
        android:layout_width="130dip"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@id/newWorkoutPopupStepsPerMinuteTextView"
        android:text="@string/new_workout_popup_cancel_button"
        android:background="@drawable/new_workout_popup_button_selector" />
    <Button
        android:id="@+id/btnStartWorkoutNewWorkoutPopup"
        android:layout_width="130dip"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/btnCancelNewWorkoutPopup"
        android:layout_toEndOf="@id/btnCancelNewWorkoutPopup"
        android:layout_below="@id/newWorkoutPopupStepsPerMinuteEditText"
        android:text="@string/new_workout_popup_start_workout_button"
        android:background="@drawable/new_workout_popup_button_selector"  />
    

</RelativeLayout>
