<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_row_selector">
    
    
	    <TextView
	        android:id="@+id/userNameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:text="Corridore:"
	        android:textColor="@color/yellow">
	    </TextView>
	 	
	    
	    <TextView
	        android:id="@+id/userName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:layout_toRightOf="@id/userNameLabel"
	        android:layout_toEndOf="@id/userNameLabel"
	        android:textColor="@color/yellow">
	    </TextView>
	    
	    <TextView
	        android:id="@+id/trainingNameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:textColor="@color/yellow"
	        android:text="Nome Allenamento"
	        android:layout_below="@id/userNameLabel">
	    </TextView>
	    
	    <TextView
	        android:id="@+id/trainingName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:layout_toRightOf="@id/trainingNameLabel"
	        android:layout_toEndOf="@id/trainingNameLabel"
	        android:layout_below="@id/userNameLabel"
	        android:textColor="@color/yellow">
	    </TextView>
	    
	    
	    <TextView
	        android:id="@+id/trainingDurationLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:layout_below="@id/trainingNameLabel"
	        android:text="Durata"
	        android:textColor="@color/yellow">
	    </TextView>
	    
	    <TextView
	        android:id="@+id/trainingDuration"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:layout_toRightOf="@id/trainingDurationLabel"
	        android:layout_toEndOf="@id/trainingDurationLabel"
	        android:layout_below="@id/trainingNameLabel"
	        android:textColor="@color/yellow">
	    </TextView>
	    
    
    
    
    
    
    
    
    <ImageView
	    android:id="@+id/shareSymbolImage"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:src="@drawable/share_symbol_image"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentEnd="true"
	    android:contentDescription="@string/view_workouts_activity_share_symbol_image_description" />
    
    <ImageView
	    android:id="@+id/trashCanSymbolImage"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:src="@drawable/trash_can_symbol_image"
	    android:layout_toLeftOf="@id/shareSymbolImage"
	    android:layout_toStartOf="@id/shareSymbolImage"
	    android:contentDescription="@string/view_workouts_activity_trash_can_symbol_image_description" />
    
    
    <ImageView
	    android:id="@+id/eyeSymbolImage"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:src="@drawable/eye_symbol_image"
	    android:layout_toLeftOf="@id/trashCanSymbolImage"
	    android:layout_toStartOf="@id/trashCanSymbolImage"
	    android:contentDescription="@string/view_workouts_activity_eye_symbol_image_description" />
    
    
    
    

</RelativeLayout>